--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-<title>Redirecting to bigbluebutton.org</title>
-<meta http-equiv="REFRESH" content="0;url=http://www.bigbluebutton.org/"></HEAD>
+<title>Redirecting to rajasthan.school</title>
+<meta http-equiv="REFRESH" content="0;url=https://rajasthan.school/"></HEAD>
 <BODY>
 </BODY>
 </HTML>
