--- a/help.html
+++ b/help.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-<title>Redirecting to BigBlueButton Help</title>
-<meta http-equiv="REFRESH" content="0;url=http://www.bigbluebutton.org/content/videos"></HEAD>
+<title>Redirecting to Rajasthan.school Help</title>
+<meta http-equiv="REFRESH" content="0;url=https://rajasthan.school"></HEAD>
 <BODY>
 </BODY>
 </HTML>
