--- a/testjava.html
+++ b/testjava.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-<title>Redirecting to BigBlueButton Help</title>
+<title>Redirecting to Testjava</title>
 <meta http-equiv="REFRESH" content="0;url=http://www.java.com/testjava/"></HEAD>
 <BODY>
 </BODY>
