--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <title>BigBlueButton - Open Source Web Conferencing</title>
-    <meta name="description" content="BigBlueButton enables universities and colleges to deliver a high-quality learning experience to remote students.">
-    <meta name="keywords" content="BigBlueButton, Open Source Web Conferencing, Distance Education, Courses Online, Web Conferencing, Open Source, Desktop Sharing, Video Conferencing, Video Collaboration, Presentation Sharing, Audio Sharing, Voice Collaboration, Public Chat, Webcam Sharing, Annotation, Whiteboard, Integrated Voice Over IP, Collaboration Software, Online Collaboration, Collaborative Learning, Virtual Classroom">
+    <title>Rajasthan.school - Future of Schooling</title>
+    <meta name="description" content="Rajasthan.school enables universities, colleges or schools to deliver a high-quality learning experience to remote students.">
+    <meta name="keywords" content="Rajasthan.school, Free Web Conferencing, Distance Education, Courses Online, Web Conferencing, Desktop Sharing, Video Conferencing, Video Collaboration, Presentation Sharing, Audio Sharing, Voice Collaboration, Public Chat, Webcam Sharing, Annotation, Whiteboard, Integrated Voice Over IP, Collaboration Software, Online Collaboration, Collaborative Learning, Virtual Classroom">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="images/favicon.png">
 
@@ -23,8 +23,8 @@
     <div class='main'>
 
     <!-- Github Fork Ribbon -->
-    <a href="https://github.com/bigbluebutton/bigbluebutton">
-        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
+    <a href="#">
+        <img style="position: absolute; top: 0; right: 0; border: 0;" src="" alt="Currently on Pilot run">
     </a>
 
     <!-- Messages -->
@@ -35,7 +35,7 @@
     <div class='navbar'>
       <div class='container'>
         <div class="logo">
-          <img src="images/bbb-logo.png" width="240" alt="BigBlueButton Demo"/>
+          <img src="https://raw.githubusercontent.com/rajesh67/raj.school/master/rajschoollogo3%20(1).svg?_sm_au_=iVVjVjt5v17f24fPscpQ8KHVVHCJF" width="240" alt="Rajasthan.school"/>
         </div>
       </div>
     </div>
@@ -51,8 +51,8 @@
       <div class='row'>
         <div class='span six html5clientOnly input-center'>
           <div class='join-meeting '>
-            <h4>Try BigBlueButton</h4>
-            <p>(requires <a href="http://docs.bigbluebutton.org/2.2/install.html#5-install-api-demos-optional">API demos</a> to be installed)</p>
+            <h4>Try Rajasthan.school</h4>
+            <p>(No signup required)</p>
 
 
             <form name="form1" method="GET" onsubmit="return checkform(this);" action="/demo/demoHTML5.jsp">
@@ -62,15 +62,15 @@
               <input type="hidden" name="action" value="create">
             </form>
 
-          <a class="watch" href="https://www.youtube.com/watch?v=uYYnryIM0Uw;feature=youtu.be" class="pull-right">Viewer Overview</a> - 
+      <!--    <a class="watch" href="https://www.youtube.com/watch?v=uYYnryIM0Uw;feature=youtu.be" class="pull-right">Viewer Overview</a> - 
           <a class="watch" href="https://www.youtube.com/watch?v=Q2tG2SS4gXA&feature=youtu.be" class="pull-right">Moderator Overview</a>
-
+-->
           </div>
         </div>
       </div>
 
       <hr class="featurette-divider">
-      <!-- Welcome Message & Login Into Demo -->
+      <!-- Welcome Message & Login Into Demo --
       <div class='row'>
        <div >
           <h2>Built for online learning</h2>
@@ -89,7 +89,7 @@
 
       <hr class="featurette-divider">
 
-      <!-- BigBlueButton Features -->
+      <!-- BigBlueButton Features --
       <div class="bbb-features">
 	      <div class='row'>
 	        <div class='featurette-heading'>
@@ -215,7 +215,7 @@
       </div>
       <hr class="featurette-divider">
 
-      <!-- BigBlueButton Videos -->
+      <!-- BigBlueButton Videos --
       <div id="video" class="bbb-videos">
 	      <div class='row'>
 	        <div class='featurette-heading'>
@@ -257,16 +257,16 @@
 
 	      <div class="row">
 	      	<div class="span six first">
-		        <p>BigBlueButton and the BigBlueButton logo are trademarks of <a href="http://bigbluebutton.org/">BigBlueButton Inc.</a></p>
+		        <p>Rajasthan.school and the Rajasthan.school logo are trademarks of <a href="https://rajasthan.school/">Rajasthan.school</a></p>
           </div>
 	      	<div class="span six last">
 						<ul>
 							<li>
 								Follow Us:
 							</li>
-							<li><a class="twitter" href="http://www.twitter.com/bigbluebutton" title="BigBlueButton Twitter Page" target="_blank"><i class="fa fa-twitter"></i></a></li>
-							<li><a class="facebook" href="http://www.facebook.com/bigbluebutton" title="BigBlueButton Facebook Page" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a class="youtube" href="http://www.youtube.com/bigbluebuttonshare" title="BigBlueButton YouTube Page" target="_blank"><i class="fa fa-youtube"></i> </a></li>
+							<li><a class="twitter" href="#" title="Rajasthan.school Twitter Page" target="_blank"><i class="fa fa-twitter"></i></a></li>
+							<li><a class="facebook" href="#" title="Rajasthan.school Facebook Page" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li><a class="youtube" href="#" title="Rajasthan.school YouTube Page" target="_blank"><i class="fa fa-youtube"></i> </a></li>
 						</ul>
 	      	</div>
 	      </div> 
@@ -274,8 +274,8 @@
 
 	      <div class="row">
 	      	<div class="span twelve center">
-		        <p>Copyright &copy; 2020 BigBlueButton Inc.<br>
-		        <small>Version <a href="http://docs.bigbluebutton.org/">2.2</a></small>
+		        <p>Copyright &copy; 2020 Rajasthan.school<br>
+		        <small>Version <a href="#">1.0 Beta</a></small>
 		        </p>
 	      	</div>
 	      </div>
