--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Rajasthan.school enables universities, colleges or schools to deliver a high-quality learning experience to remote students.">
     <meta name="keywords" content="Rajasthan.school, Free Web Conferencing, Distance Education, Courses Online, Web Conferencing, Desktop Sharing, Video Conferencing, Video Collaboration, Presentation Sharing, Audio Sharing, Voice Collaboration, Public Chat, Webcam Sharing, Annotation, Whiteboard, Integrated Voice Over IP, Collaboration Software, Online Collaboration, Collaborative Learning, Virtual Classroom">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="images/favicon.png">
+		<link rel="icon" href="/favicon-32x32.png">
 
     <link rel="stylesheet" href="css/bijou.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -22,7 +22,7 @@
   <body>
     <div class='main'>
 
-    <!-- Github Fork Ribbon -->
+    <!-- Github Fork Ribbon --
     <a href="#">
         <img style="position: absolute; top: 0; right: 0; border: 0;" src="" alt="Currently on Pilot run">
     </a>
