--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
             <form name="form1" method="GET" onsubmit="return checkform(this);" action="https://rajasthan.school/b/ume-5hh-wjz" >
-              <input type="text" id="username" required="" name="username" placeholder="Enter Your Name" size="29" class="field input-default" autofocus>
+             <!-- <input type="text" id="username" required="" name="username" placeholder="Enter Your Name" size="29" class="field input-default" autofocus> -->
               <input type="submit" value="Join" class="submit_btn button success large"><br>
               <input type="hidden" name="isModerator" value="true">
               <input type="hidden" name="action" value="create">
